--- a/package.json
+++ b/package.json
@@ -30,5 +30,15 @@
     "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
-  }
+  },
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jeanetth/cellPhoneEbayVue.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jeanetth/cellPhoneEbayVue/issues"
+  },
+  "homepage": "https://github.com/Jeanetth/cellPhoneEbayVue#readme"
 }
